examples/core/errors/type_errors/02_annotation_mismatch.output.txt

error[E0101]: Type mismatch
  ┌─ input:3:16
1 │ // Type Error: Type mismatch
2 │ // Trying to use $I32 where $Type is expected (function parameter type)
3 │ (x : $I32) -> (x : $Type(1))
                   ^ ----
4 │ 
  = note: $Type(1) and Int are incompatible types
  = note: The expression produces $Type(1) but Int is expected here
  = hint: Check that the expression has the expected type
  = hint: Consider adding a type annotation
  = hint: Did you mean to use a different expression?

